[package]
name = "daspotwidget"
version = "0.1.0"
edition = "2021"

[features]
hyprland = []

[dependencies]
iced = { path = "./iced", features = ["advanced", "image", "tokio"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
winit = "0.30.1"
