[package]
name = "daspotwidget"
version = "0.1.0"
edition = "2021"

[features]
hyprland = []

[dependencies]
iced = { git = "https://www.github.com/iced-rs/iced.git", features = [
    "advanced",
    "image",
    "tokio",
] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12.4"
